# causal-digital-twin-iisc

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: architecture.md
landing-page/: index.html  style.css
src/: __init__.py  config.py
src/dashboard/: __init__.py  app.py  inference.py
src/dashboard/static/css/: dashboard.css
src/dashboard/static/js/: dashboard.js  landing.js
src/dashboard/templates/: index.html  landing.html
src/data/: __init__.py  actg175_loader.py  addi_harmonize.py  ihdp_loader.py  missing_indicators.py  news_loader.py  preprocessing.py  synthetic_mci.py
src/deployment/: __init__.py  model_export.py  onnx_export.py  quantize.py
src/models/: __init__.py  dml_nuisance.py  honest_tree.py  macf.py  risk_predictor.py
src/pipeline/: __init__.py  e_value.py  evaluate.py  negative_controls.py  train.py
tests/: test_data.py  test_macf.py
